--- a/index.html
+++ b/index.html
@@ -4,8 +4,220 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda-Commerce</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    
+    <!-- narvbar -->
+    <div class="container">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#shoes">Shoes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#backpack">Backpack</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " >Contact us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </div>
+
+    <!-- banner -->
+     <div class="container">
+        <div id="carouselExampleAutoplaying" class="carousel slide banner-bg" data-bs-ride="carousel">
+            <div class="carousel-inner ">
+              <div class="carousel-item active ">
+                <div class="row  align-items-center">
+                    <div class="col-7 ">
+                        <h1>MEga LCD TV For sports</h1>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, a.</p>
+                        <h1 class="price">$1200</h1>
+                        <button class="buy-now-btn">Buy Now</button>
+                    </div>
+                    <div class="col-5">
+                        <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                 <div class="row align-items-center">
+                    <div class="col-7">
+                        <h1>Mi LED TV 4A PRO 32</h1>
+                        <p >Contrary to popular belief</p>
+                        <h1 class="price">$1200</h1>
+                        <button class="buy-now-btn">Buy Now</button>
+                    </div>
+                    <div class="col-5">
+                        <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                </div>
+              <div class="carousel-item">
+                <div class="row align-items-center">
+                    <div class="col-7">
+                        <h1>MEga LCD TV For sports</h1>
+                        <p >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, aspernatur. Mollitia quibusdam vitae blanditiis ducimus fugiat magnam ullam, consectetur nisi.</p>
+                        <h1 class="price">$1200</h1>
+                        <button class="buy-btn">Buy Now</button>
+                    </div>
+                        <div class="col-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+     </div>
+
+     <!-- categories -->
+      <div class="container categories" >
+        <div class="row">
+            <div class="col-md-4 ">
+                <div class="d-flex justify-content-between align-items-center cat-1">
+                    <h1>Watch</h1>
+                    <img src="images/categories/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat-2">
+                    <h1>Bag</h1>
+                    <img src="images/categories/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat-3">
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <!-- shoe card -->
+       <div class="container shoes" id="shoes">
+        <h3>Shoes</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supply 350</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5>$120</h5>
+                  <button class="buy-now-btn">Buy Now>></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Nike 320</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h5>$320</h5>
+                  <button class="buy-now-btn">Buy Now>></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Max</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <h5>$350</h5>
+                  <button class="buy-now-btn">Buy Now>></button>
+                </div>
+              </div>
+            </div>
+          </div>
+       </div>
+
+       <!-- BackPack Card -->
+       <div class="container shoes" id="backpack">
+        <h3>Backpack</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Backpack</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5>$120</h5>
+                </div>
+                <div class="card-footer">
+                    <button class="buy-now-btn">Buy Now>></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue Backpack</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h5>$320</h5>
+                </div>
+                <div class="card-footer">
+                    <button class="buy-now-btn">Buy Now>></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black Backpack</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <h5>$169</h5>
+                 
+                </div>
+                <div class="card-footer">
+                    <button class="buy-now-btn">Buy Now>></button>
+                </div>
+              </div>
+            </div>
+          </div>
+       </div>
+
+       <!-- subscribe -->
+       <div class="container d-flex justify-content-center align-items-center banner-bg " id="subscribe">
+         <div>
+            <h3 class="mt-3">LETS STAY IN TOUCH</h3>
+            <h6 >Get updates on sales, special and more</h6>
+            <input class="form-control mt-3" type="text">
+            <button class="buy-now-btn mt-3">Submit</button>
+         </div>
+       </div>
+
+       <!-- footer -->
+        <footer>
+            <small>&copy;copyright 2024, All rights reserved to panda commerce, sofia, Bugeria</small>
+        </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
